CSS Intro Course

--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <title>Fernando's Personal Website</title>
+    <style>
+      body {
+        background-color: #eaf6f6;
+      }
+
+      hr {
+        border-style: none;
+        border-top: dotted;
+        border-color: grey;
+        border-width: 5px;
+        width: 5%;
+      }
+    </style>
   </head>
   <body>
     <table cellspacing="20">
