--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
 
     <title>Contact Me</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <h1>My Contact Details</h1>
     <p><a href="https://www.facebook.com/fernando.tejeda.5">Facebook</a></p>
     <p>Phone Number: 951-951-5151</p>
     <p>myemail@aol.com</p>
+    <hr />
     <form action="mailto:feteje@aol.com" method="post" enctype="text/plain">
       <label for="">Your Name:</label>
       <input type="text" name="yourName" /><br />
