--- a/index.html
+++ b/index.html
@@ -3,19 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Fernando's Personal Website</title>
-    <style>
-      body {
-        background-color: #eaf6f6;
-      }
-
-      hr {
-        border-style: none;
-        border-top: dotted;
-        border-color: grey;
-        border-width: 5px;
-        width: 5%;
-      }
-    </style>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <table cellspacing="20">
