final addition on CSS Intro

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <strong
                 ><a
                   href="https://www.youtube.com/channel/UCYK6CpM5tsLbD1Nbb4Rk5gw"
-                  >YouTuber</a
+                  >YouTuber!</a
                 ></strong
               >.
             </em>
